[package]

name = "rgit"
version = "0.1.0"
authors = ["Christian Briones <christian@gmail.com>"]

[dependencies]
getopts = "0.2.14"
rust-crypto = "0.2.34"
rustc-serialize = "0.3.16"
flate2 = "0.2.13"
nom = "1.1.0"
byteorder = "0.4.2"
hyper = "0.7.2"
clap = "1.5.5"
ssh2 = "0.2"
crc = "1.2.0"
chrono = "0.2.19"
regex = "0.1.55"

[[bin]]
name = "rgit"

