[package]
name = "rgit"
version = "0.1.0"
authors = ["Christian Briones <christian@gmail.com>"]
edition = "2021"

[dependencies]
sha-1 = "0.9.8"
flate2 = "0.2.13"
nom = "7.1.0"
structopt = "0.3.25"
chrono = "0.4.19"
byteorder = "1.4.3"
reqwest = { version = "0.11", features = ["blocking"] }
ssh2 = "0.9.3"
crc32fast = "1.2.1"
regex = "0.1.55"
faster-hex = "0.6.1"
anyhow = { version = "1.0.45", features = ["backtrace"] }

[[bin]]
name = "rgit"

